Minicraft+ version 2.0.6

+ Prevented players from getting stuck in skyholes with a cool animation
* Fixed the creeper's explosion to only hurt mobs if it actually explodes
* Made the quick-save key configurable
+ Added French localization
+ Cloud cacti now drop, they can then be crafted into cloud dust, which makes plants fully grown, among other things


Minicraft+ version 2.0.5

+ Added tool durability to all tools
* Updated door sprites and a couple others in minor ways
* Fixed a couple more multiplayer bugs; also, as of dev6, players should stop crashing when changing levels
+ Added window popup to display errors
+ Added Spanish localization
* Fixed some localization bugs
* Fixed bug with item crafting and reference
* Fixed bug with dungeon chests refilling on load
* Allowed creative player to walk outside cloud tiles in the sky
* Made hoe turn grass into dirt instead of straight to farmland; but with significantly higher chance of seeds
* Fixed bug with "Click to focus" text rendering
* Fixed bug with armor loading
+ Added escape potion, which brings you one level closer to the surface from where it's used
* Made some adjustments to some of the sprites for improved detail
* Made flowers spread grass to dirt like grass spreads grass to dirt, since a flower tile is technically grass too
+ Added an indicator to tell you what tile in item will be placed on
+ Separated directional input into movement and cursor, for player movement and menu selection respectively.
* Fixed the wheat tile's background
* Fixed bug where creative player couldn't break a tile
* Made sand behave like dirt when being placed
* Fixed item data in chests
* Made items face the right way when you attack with them


Minicraft+ version 2.0.4

* HUGE menu renovation! Menus will be changed forever. You'll see. It's pretty obvious.
+ Added world seeding! You now have a reliable way of recreating a world... provided you used a seed in the first place, that is... Commands aren't quite here yet...